Added follow, 1/2 broken state
